--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,35 @@
-body {
-  background-color: #e2e2e2;
+@import 'variables';
+@import 'components/tab-control';
+
+.custom-tabs .tab-links {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.custom-tabs .tab-links li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.custom-tabs .tab-links li a {
+  text-decoration: none;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px 5px 0 0;
+  background-color: #f0f0f0;
+}
+
+.custom-tabs .tab-links li.active a {
+  background-color: #fff;
+}
+
+.custom-tabs .tab-content .tab {
+  display: none;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.custom-tabs .tab-content .tab:first-child {
+  display: block;
 }
