--- a/src/scss/components/_tab-control.scss
+++ b/src/scss/components/_tab-control.scss
@@ -1,28 +1,50 @@
-.tabs {
+.tabs-container {
   display: flex;
-  justify-content: space-around;
-  margin-bottom: 20px;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
+  align-items: center;
 
-  .tab {
-    button {
-      background-color: #f2f2f2;
-      border: none;
-      outline: none;
-      cursor: pointer;
-      padding: 10px 20px;
-      transition: background-color 0.3s ease;
+  .tabs {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    overflow-x: scroll;
+    scrollbar-width: none;
+    width: 100%;
 
-      &.active {
-        background-color: #ddd;
+    .tab {
+      button {
+        all: unset;
+        cursor: pointer;
+        color: #cfd6dd;
+        cursor: pointer;
+        padding: 10px 20px;
+        text-wrap: nowrap;
+        font-weight: 700;
+
+        &.active {
+          color: $color-primary;
+        }
       }
     }
   }
-}
 
-.tabcontent {
-  display: none;
+  .tabcontent {
+    display: none;
 
-  &.active {
+    &.active {
+      display: block;
+    }
+  }
+
+  .logos {
     display: block;
+    margin: auto;
+    text-align: center;
+
+    img {
+      width: 100%;
+    }
   }
 }
