add style for mobile the static tab and add img assets

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,3 @@
-$color_primary: #4c3eff;
-$color_light: #f3f5f7;
-$color_dark: #080e3f;
+$color-primary: #4c3eff;
+$color-light: #f3f5f7;
+$color-dark: #080e3f;
