--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'components/tab-control';
+@import 'components/static-tab';
 
 body {
   font-family: 'proxima-nova', sans-serif;
